--- a/MRSA.ipynb
+++ b/MRSA.ipynb
@@ -32,6 +32,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ed72d69-3382-4e74-b0f6-f770bc6c3428",
+   "metadata": {},
+   "source": [
+    "Since the dataset is greater than 25mb it cannot be compressed or uploaded to github. So, I'm attaching the link to the dataset below.\n",
+    "\n",
+    "https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "e868a22d-589a-4258-a3c4-8daf2bbf86f2",
